appId: com.enigmaproject
---
- launchApp
- tapOn:
    label: "Open drawer"
- tapOn: "About Enigma"
- assertVisible: "About Enigma"
