appId: com.enigmaproject
---
- launchApp
- tapOn:
    label: "Open drawer"
- tapOn: "Settings"
- assertVisible: "Settings"
